admin alignment fixed

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -4,10 +4,11 @@ html, body {
 
 body {
   padding-top: 70px;
-  /*background-image: url('../images/metlife2.jpg');*/
-  background-color: rgb(220, 220, 220);
+  background-image: url('../images/metlife2.jpg');
+  /*background-color: rgb(220, 220, 220);*/
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: 'Droid Sans', sans-serif;
 }
 
 .navbar-inverse {
@@ -17,9 +18,21 @@ body {
 .jumbotron {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
+    font-family: 'Signika Negative', sans-serif;
 }
 
+/*headers*/
+h1, h2, h5, h6 {
+  font-family: 'Droid Sans', sans-serif;
+}
+
+#admin_hdr {
+  margin-bottom: 20px;
+}
+
+/*images */
 /*.img-sm {
-  max-width: 10%;
+  max-width: 14%;
+  height: auto;
   vertical-align: 0%;
 }*/
